@@ -28,6 +28,9 @@ import java.io.IOException;
 import java.util.Hashtable;
 import java.util.Vector;
 
+import ome.xml.model.primitives.NonNegativeInteger;
+import ome.xml.model.primitives.PositiveInteger;
+
 import loci.common.DataTools;
 import loci.common.DateTools;
 import loci.common.Location;
@@ -514,7 +517,7 @@ public class ZeissLSMReader extends FormatReader {
         addSeriesMeta("DataType", "8 bit unsigned integer");
     }
 
-    if (getMetadataOptions().getMetadataLevel() == MetadataLevel.ALL) {
+    if (getMetadataOptions().getMetadataLevel() != MetadataLevel.MINIMUM) {
       ras.seek(0);
       addSeriesMeta("MagicNumber ", ras.readInt());
       addSeriesMeta("StructureSize", ras.readInt());
@@ -646,7 +649,7 @@ public class ZeissLSMReader extends FormatReader {
       store.setChannelID(lsid, series, c);
     }
 
-    if (getMetadataOptions().getMetadataLevel() == MetadataLevel.ALL) {
+    if (getMetadataOptions().getMetadataLevel() != MetadataLevel.MINIMUM) {
       int spectralScan = ras.readShort();
       if (spectralScan != 1) {
         addSeriesMeta("SpectralScan", "no spectral scan");
@@ -696,8 +699,11 @@ public class ZeissLSMReader extends FormatReader {
       overlayOffsets[7] = ras.readInt();
       overlayOffsets[8] = ras.readInt();
 
-      for (int i=0; i<overlayOffsets.length; i++) {
-        parseOverlays(series, overlayOffsets[i], overlayKeys[i], store);
+      if (getMetadataOptions().getMetadataLevel() != MetadataLevel.NO_OVERLAYS)
+      {
+        for (int i=0; i<overlayOffsets.length; i++) {
+          parseOverlays(series, overlayOffsets[i], overlayKeys[i], store);
+        }
       }
 
       totalROIs = 0;
@@ -871,7 +877,7 @@ public class ZeissLSMReader extends FormatReader {
 
     imageNames.add(imageName);
 
-    if (getMetadataOptions().getMetadataLevel() == MetadataLevel.ALL) {
+    if (getMetadataOptions().getMetadataLevel() != MetadataLevel.MINIMUM) {
       Double pixX = new Double(pixelSizeX);
       Double pixY = new Double(pixelSizeY);
       Double pixZ = new Double(pixelSizeZ);
@@ -909,7 +915,7 @@ public class ZeissLSMReader extends FormatReader {
     int series)
     throws FormatException
   {
-    if (getMetadataOptions().getMetadataLevel() != MetadataLevel.ALL) {
+    if (getMetadataOptions().getMetadataLevel() == MetadataLevel.MINIMUM) {
       return;
     }
 
@@ -927,8 +933,8 @@ public class ZeissLSMReader extends FormatReader {
       store.setObjectiveCorrection(
         getCorrection(recording.correction), series, 0);
       store.setObjectiveImmersion(getImmersion(recording.immersion), series, 0);
-      store.setObjectiveNominalMagnification(recording.magnification,
-        series, 0);
+      store.setObjectiveNominalMagnification(
+          new PositiveInteger(recording.magnification), series, 0);
       store.setObjectiveLensNA(recording.lensNA, series, 0);
       store.setObjectiveIris(recording.iris, series, 0);
       store.setObjectiveID(objectiveID, series, 0);
@@ -990,14 +996,14 @@ public class ZeissLSMReader extends FormatReader {
           String transmittance = channel.filter.substring(space + 1).trim();
           String[] v = transmittance.split("-");
           try {
-            store.setTransmittanceRangeCutIn(new Integer(v[0].trim()), series,
-              nextFilter);
+            store.setTransmittanceRangeCutIn(
+                PositiveInteger.valueOf(v[0].trim()), series, nextFilter);
           }
           catch (NumberFormatException e) { }
           if (v.length > 1) {
             try {
-              store.setTransmittanceRangeCutOut(new Integer(v[1].trim()),
-                series, nextFilter);
+              store.setTransmittanceRangeCutOut(
+                  PositiveInteger.valueOf(v[1].trim()), series, nextFilter);
             }
             catch (NumberFormatException e) { }
           }
@@ -1099,7 +1105,7 @@ public class ZeissLSMReader extends FormatReader {
           double y = in.readDouble();
           String text = DataTools.stripString(in.readCString());
           store.setTextValue(text, i, 0);
-          store.setTextFontSize(fontHeight, i, 0);
+          store.setTextFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setTextStrokeWidth(lineWidth, i, 0);
           break;
         case LINE:
@@ -1113,7 +1119,7 @@ public class ZeissLSMReader extends FormatReader {
           store.setLineY1(startY, i, 0);
           store.setLineX2(endX, i, 0);
           store.setLineY2(endY, i, 0);
-          store.setLineFontSize(fontHeight, i, 0);
+          store.setLineFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setLineStrokeWidth(lineWidth, i, 0);
           break;
         case SCALE_BAR:
@@ -1138,7 +1144,7 @@ public class ZeissLSMReader extends FormatReader {
           store.setRectangleY(topY, i, 0);
           store.setRectangleWidth(width, i, 0);
           store.setRectangleHeight(height, i, 0);
-          store.setRectangleFontSize(fontHeight, i, 0);
+          store.setRectangleFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setRectangleStrokeWidth(lineWidth, i, 0);
 
           break;
@@ -1194,7 +1200,7 @@ public class ZeissLSMReader extends FormatReader {
           store.setEllipseY(centerY, i, 0);
           store.setEllipseRadiusX(rx, i, 0);
           store.setEllipseRadiusY(ry, i, 0);
-          store.setEllipseFontSize(fontHeight, i, 0);
+          store.setEllipseFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setEllipseStrokeWidth(lineWidth, i, 0);
 
           break;
@@ -1212,7 +1218,7 @@ public class ZeissLSMReader extends FormatReader {
           store.setEllipseY(centerY, i, 0);
           store.setEllipseRadiusX(radius, i, 0);
           store.setEllipseRadiusY(radius, i, 0);
-          store.setEllipseFontSize(fontHeight, i, 0);
+          store.setEllipseFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setEllipseStrokeWidth(lineWidth, i, 0);
 
           break;
@@ -1247,7 +1253,7 @@ public class ZeissLSMReader extends FormatReader {
           store.setEllipseY(cy, i, 0);
           store.setEllipseRadiusX(r, i, 0);
           store.setEllipseRadiusY(r, i, 0);
-          store.setEllipseFontSize(fontHeight, i, 0);
+          store.setEllipseFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setEllipseStrokeWidth(lineWidth, i, 0);
 
           break;
@@ -1269,7 +1275,7 @@ public class ZeissLSMReader extends FormatReader {
           }
 
           store.setPolylinePoints(p.toString(), i, 0);
-          store.setPolylineFontSize(fontHeight, i, 0);
+          store.setPolylineFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setPolylineStrokeWidth(lineWidth, i, 0);
 
           break;
@@ -1294,7 +1300,7 @@ public class ZeissLSMReader extends FormatReader {
 
           store.setPolylinePoints(p.toString(), i, 0);
           store.setPolylineClosed(type == CLOSED_POLYLINE, i, 0);
-          store.setPolylineFontSize(fontHeight, i, 0);
+          store.setPolylineFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setPolylineStrokeWidth(lineWidth, i, 0);
 
           break;
@@ -1319,7 +1325,7 @@ public class ZeissLSMReader extends FormatReader {
 
           store.setPolylinePoints(p.toString(), i, 0);
           store.setPolylineClosed(type != OPEN_BEZIER, i, 0);
-          store.setPolylineFontSize(fontHeight, i, 0);
+          store.setPolylineFontSize(new NonNegativeInteger(fontHeight), i, 0);
           store.setPolylineStrokeWidth(lineWidth, i, 0);
 
           break;
